# dockusketch_task

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: run_test.yml
app/: custom_logging.py  main.py  test_main.py
